# uni_masters

./: README.md
pms/: .gitignore  .gitignore.orig  README.md  frontier.papers  git.pms.output  output.ass5build  (+1 more)
pms/assignments/goodEgAss2/11377823/: CMakeLists.txt  RangerFusionInterface.h  laser.cpp  laser.h  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  sonar.cpp  sonar.h
pms/essC++/ExerciseFiles/Chap02/: CMakeLists.txt  CMakeLists.txt.allWrks  func-fnValuePassByRef++  func-fnValuePassByRef++.cpp  func-operator.cpp  func-overload.cpp.orig  func.cpp.asForC  func.cpp.asForC++  func.cpp.fnPtr  func.cpp.fnValuePassByRefC++usingString  func.h.asForC  func.h.asForC++  jump.cpp.fnPtrs  recursive-factorial.cpp  usingFunctionPointers.5  variadic.cpp
pms/essC++/ExerciseFiles/Chap04/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.wrks  accessors.cpp  class.cpp  class.cpp.noThisOperator  class.cpp.wrks  constructors.cpp  exceptions.cpp  function-object.cpp  implicit-explicit.cpp  namespace.cpp  new-delete.cpp  numword-test.cpp  numword-test.cpp.smNoWrks  numword.h  rational.cpp  rational.cpp.beforeConversionOperators  working.cpp  working.cpp.fnMembers  working.cpp.structVSclass
pms/essC++/ExerciseFiles/Chap08/: CMakeLists.txt  CMakeLists.txt.orig  README.understandingTemplates  decltype.cpp  template-class.cpp  template-function.cpp
pms/essC++/ExerciseFiles/Chap08/orig/: README
pms/essC++/ExerciseFiles/Chap10/: CMakeLists.txt  README.overview  deque.cpp  exception.cpp  exception.cpp.brokenOnly  exception.cpp.derivedFromStdExceptnClass  iostream-file.cpp  iostream-formatting.cpp.cin  iostream-formatting.cpp.getline  iostream-formatting.cpp.manipulators  iterator.cpp  list.cpp  map.cpp  set.cpp  stack.cpp  string.cpp  vector.cpp  vector.cpp.1.ints  vector.cpp.2.strings  vector.cpp.initIterateDerefRangeBaseForLoop  working.cpp
pms/gtest-building/exampleVideo/: CMakeLists.txt  CMakeLists.txt.example  exampleVideo.cpp
pms/lecturesPlusTutorials/week1/proj/withCMake/: CMakeLists.txt  README  cStrings.cpp  craysMacros.cpp  functions.cpp  functions.cpp.1  functions.cpp.2  loops.c  loops.cpp  ptrRef.cpp  switchCase.c  switchCase.cpp
pms/lecturesPlusTutorials/week1/proj/withCMake/build.oldir/: CMakeCache.txt  Makefile  cStrings  cmake_install.cmake  craysMacros  loops  ptrRef  ptrRef.orig  rectangle  rectangle.wrks  switchCase  test
pms/lecturesPlusTutorials/week1/proj/withCMake/tutorial/: README.segfault.tooLong
pms/lecturesPlusTutorials/week11/proj/: CMakeLists.txt
pms/lecturesPlusTutorials/week2.oneClass/tutorial/: CMakeLists.txt  README.questns  main.cpp  rectangle.h  rectangle.h.other
pms/lecturesPlusTutorials/week2.oneClass/tutorial/build.0/: Makefile  rectangle
pms/lecturesPlusTutorials/week2.oneClass/tutorial/random/: main.cpp  output.random.segfault
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/: CMakeLists.txt
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial.inClass/: function.cpp  task1.cpp  task2.cpp  task3.cpp
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task1/: CMakeLists.txt  stlVectorOperations.cpp  stlVectorOperations.cpp.printValues  stlVectorOperations.cpp.properRandomNumGen  stlVectorOperations.cpp.randomNumGeneratn  stlVectorOperationsInts.cpp
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task2/: CMakeLists.txt  circle.cpp  main.cpp  shape.cpp  shape.h  shapefunctions.cpp  shapefunctions.h
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task2/seedFromWeek4Tutorial/: README  circle.h  main.cpp  rectangle.cpp  shape.h  shapefunctions.cpp
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/: main.cpp  main.cpp.noSortID
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/wrks/bubbleSortGroupViaId/: student.cpp  student.h
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/wrks/createMainPlusVector/: main.cpp
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/wrks/createStudentClass/: CMakeLists.txt  main.cpp  student.cpp  student.h
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/wrks/templateTintTdoubleTstring/: main.cpp
pms/lecturesPlusTutorials/week5.stlContainers.templates/proj/tutorial/task3/wrks/templateUsed/: main.cpp
pms/lecturesPlusTutorials/week7.pathFinding/proj/tutorial/cmdline/: CMakeLists.txt  main.cpp.fstPass
pms/lecturesPlusTutorials/week8.threads/proj/tutorial.inClass/using_condition_vars.qtCreator/: CMakeLists.txt  CMakeLists.txt.orig  README.build.cpp.via.qtCreator
pms/lecturesPlusTutorials/week9.doxygen/tutorial.inClass/week09_doxygen/one_shape_doxygen/: CMakeLists.txt  CMakeLists.txt.orig  README.sm  index.dox
pms/lecturesPlusTutorials/week9.doxygen/tutorial.inClass/week09_doxygen/one_shape_doxygen/smagri/: CMakeLists.txt.sm  Doxyfile.in.sm  README  README.sm  index.dox.sm  rectangle.h  shape.h
pms/peerCodeReviews/ass1/code/one/assignment1_11372063/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.h
pms/peerCodeReviews/ass1/code/three/: 11980974.rar  CMakeLists.txt  main.cpp  sensor.cpp  sensor.h
pms/peerCodeReviews/ass1/code/two/Assignment 1/: Assign1  Assign1.cbp  Assign1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  laser.cpp  laser.h  sensor.cpp  sensor.h
pms/peerCodeReviews/ass2/code/one/Assignment2-12005082/: CMakeLists.txt  Main.cpp  laser.cpp  laser.h  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.cpp  sonar.cpp  sonar.h
pms/peerCodeReviews/ass2/code/three/Assignment 2/: Assign2  Assign2.cbp  Assign2.cpp  CMakeLists.txt  Laser.cpp  Laser.cpp.autosave  Laser.h  Laser.h.autosave  Makefile  Radar.cpp  Radar.cpp.autosave  Radar.h  Ranger.cpp  Ranger.cpp.autosave  Ranger.h  Ranger.h.autosave  RangerFusion.cpp  RangerFusion.cpp.autosave  RangerFusion.h  RangerFusionInterface.cpp  RangerFusionInterface.h  Sonar.cpp  Sonar.cpp.autosave  Sonar.h
(+1616 files in other folders)
